--- a/LeetCodeProblems.Tests/LeetCodeProblems.Tests.csproj
+++ b/LeetCodeProblems.Tests/LeetCodeProblems.Tests.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LeetCodeProblems\LeetCodeProblems.csproj" />
+  </ItemGroup>
+
 </Project>
